# bcr-backend

./: Dockerfile  bcr.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt  utils.py
routers/: customers.py  dvds.py  employees.py  rentals.py
